      This provides a hint to users of transports as to the reasonable
      minimum data to read. In principle this can take latency and
      bandwidth into account on a per-connection basis, but for now it
      just has hard coded values based on the url. (e.g. http:// has a large
      page size, file:// has a small one.) (Robert Collins)

  TESTING:

    * Remove selftest ``--clean-output``, ``--numbered-dirs`` and
      ``--keep-output`` options, which are obsolete now that tests
      are done within directories in $TMPDIR.  (Martin Pool)

    * The SSH_AUTH_SOCK environment variable is now reset to avoid 
      interaction with any running ssh agents.  (Jelmer Vernooij, #125955)


bzr 0.18  2007-07-17

  BUGFIXES:

    * Fix 'bzr add' crash under Win32 (Kuno Meyer)


bzr 0.18rc1  2007-07-10

  BUGFIXES:

    * Do not suppress pipe errors, etc. in non-display commands
      (Alexander Belchenko, #87178)

    * Display a useful error message when the user requests to annotate
      a file that is not present in the specified revision.
      (James Westby, #122656)

    * Commands that use status flags now have a reference to 'help
      status-flags'.  (Daniel Watkins, #113436)

    * Work around python-2.4.1 inhability to correctly parse the
      authentication header.
      (Vincent Ladeuil, #121889)

    * Use exact encoding for merge directives. (Adeodato Simó, #120591)

    * Fix tempfile permissions error in smart server tar bundling under
      Windows. (Martin_, #119330)

    * Fix detection of directory entries in the inventory. (James Westby)

    * Fix handling of http code 400: Bad Request When issuing too many ranges.
      (Vincent Ladeuil, #115209)

    * Issue a CONNECT request when connecting to an https server
      via a proxy to enable SSL tunneling.
     (Vincent Ladeuil, #120678)

    * Fix ``bzr log -r`` to support selecting merge revisions, both 
      individually and as part of revision ranges.
      (Kent Gibson, #4663)
 